website/websites/u64q/code/fannkuch.1.scala.log

Sat, 19 Jun 2010 02:18:29 GMT

MAKE:
mv fannkuch.scala fannkuch.scala
mv: `fannkuch.scala' and `fannkuch.scala' are the same file
make: [fannkuch.scala_run] Error 1 (ignored)
/usr/local/src/scala-2.8.0.RC6/bin/scalac fannkuch.scala
fannkuch.scala:10: error: not found: type int
  var permN : int = 0
              ^
fannkuch.scala:11: error: not found: type int
  var maxFlips : int = 0
                 ^
fannkuch.scala:13: error: not found: type int
  def flips(l: List[int]): int = l match {
                           ^
fannkuch.scala:13: error: not found: type int
  def flips(l: List[int]): int = l match {
                    ^
fannkuch.scala:15: error: type mismatch;
 found   : A
 required: Int
    case n :: ls => flips((l take n reverse) ::: (l drop n)) + 1
                                  ^
fannkuch.scala:18: error: not found: type int
  def rotateLeft(l: List[int]) = 
                         ^
fannkuch.scala:21: error: not found: type int
  def printPerm(perm: List[int]) = 
                           ^
fannkuch.scala:24: error: not found: type int
  def processPerm(perm: List[int]) = {
                             ^
fannkuch.scala:30: error: not found: type unit
  def permutations(l: List[int], n: int, i: int): unit = {
                                                  ^
fannkuch.scala:30: error: not found: type int
  def permutations(l: List[int], n: int, i: int): unit = {
                           ^
fannkuch.scala:30: error: not found: type int
  def permutations(l: List[int], n: int, i: int): unit = {
                                    ^
fannkuch.scala:30: error: not found: type int
  def permutations(l: List[int], n: int, i: int): unit = {
                                            ^
12 errors found
make: [fannkuch.scala_run] Error 1 (ignored)
3.40s to complete and log all make actions

COMMAND LINE:
 /usr/local/src/jdk1.6.0_18/bin/java -server  -Xbootclasspath/a:/usr/local/src/scala-2.8.0.RC6/lib/scala-library.jar fannkuch 10

PROGRAM FAILED 


PROGRAM OUTPUT:

Exception in thread "main" java.lang.NoClassDefFoundError: fannkuch
Caused by: java.lang.ClassNotFoundException: fannkuch
	at java.net.URLClassLoader$1.run(URLClassLoader.java:202)
	at java.security.AccessController.doPrivileged(Native Method)
	at java.net.URLClassLoader.findClass(URLClassLoader.java:190)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:307)
	at sun.misc.Launcher$AppClassLoader.loadClass(Launcher.java:301)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:248)
Could not find the main class: fannkuch.  Program will exit.
